REQ00011113221RT1SP